traces/bug_482.txt
examples++-load/gmsh.cpp:765: error: DEAD_STORE
  The value written to &partition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:765:3: Write of unused value
763.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
764.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
765.   		int partition = (numTags > 2) ? data[4 - numTags + 2] : 0;
         ^
766.   		int *indices = &data[numTags + 1];
767.   
